# WhisperPython

./: README.md  onlyP.md
anon_platform/: .gitignore  pyproject.toml
anon_platform/app/: main.py
anon_platform/app/api/routes/: __init__.py  auth.py  users.py
anon_platform/app/core/: config.py
anon_platform/app/db/: models.py  session.py
anon_platform/app/schemas/: user.py
anon_platform/app/services/: security.py  user.py
